--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "chai": "^1.9.1",
     "chai-as-promised": "^4.1.1",
     "chalk": "^0.4.0",
+    "concat-stream": "^1.4.6",
     "configstore": "^0.2.3",
     "connect-chain": "0.0.1",
     "connect-livereload": "^0.3.2",
@@ -132,6 +133,7 @@
     "rewire": "^2.0.1",
     "rimraf": "^2.2.8",
     "rsvp": "^3.0.9",
+    "semver": "^2.3.1",
     "testem": "^0.6.15",
     "through": "^2.3.4",
     "tiny-lr": "0.0.5",
